# python-sysadmin-toolkit

./: .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
commands/: check_ports.py  disk_report.py  log_scan.py
mytool/: __main__.py  cli.py
tests/: test_smoke.py
