[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-sysadmin-toolkit"
version = "0.1.0"
description = "Small sysadmin/ops CLI utilities in Python (Typer + pytest)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.21.0",
  "rich>=10.11.0",
  "shellingham>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools]
packages = ["mytool", "commands"]

[project.scripts]
mytool = "mytool.cli:app"
